# mura-fusion

./: .gitignore  README.md  data_download.py  ensemble_test.py  fusion.ipynb  fusion.py  fusion_convnext.py  fusion_nfnet.py  fusion_resnet.py  fusion_vit.py  fusion_vit_b.py  fusion_vit_l.py  new_data.py  pretrain.py  pyproject.toml  resnet152.py  resnet50.py  trainer.py  unfreezer.py  vis_infer.py
architectures/: classifier.py  classifier_lora.py  classifier_separate.py  convnext_l.py  convnext_tiny_tiled.py  convnext_xl.py  custom_vit.py  eva02.py  modules.py  nfnet_f4.py  resnet101.py  resnet152.py  resnet50.py  vit_b_16.py  vit_b_32.py  vit_l_16.py  vit_l_32.py
fusers/: fusion_convnext.py  fusion_convnext_xl.py  fusion_convtiny.py  fusion_eva.py  fusion_resnet.py  fusion_vit_l.py
helpers/: augments.py  checkpoint.py  patientdataset.py  reporter.py  trainer.py  unfreezer.py
models/convnext_l/: best_model_convnext_l_metrics.json  best_model_convnext_l_report.txt
models/resnet152/: best_model_resnet152_metrics.json  best_model_resnet152_report.txt
models/vit_l_16/: best_model_vit_l_16_metrics.json  best_model_vit_l_16_report.txt
